Make dkey image grid look like the Level 3 grid
Not only does this copy over to the dkey the CSS for the Level 3 grid
(improving the CSS along the way, by using Compass mixins and :before
and :after elements where appropriate to remove hundreds of empty
elements from our HTML that are still used over on the Level 3 page),
but this design completes our move back to a dkey page that includes
no images but pulls them from an API instead.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -165,13 +165,7 @@
    Show photos of: <select></select>
 </p>
 
-<div class="taxon-images">
-  {% for title, image in image_collection %}
-    <figure data-type="{{ image.image_type }}">
-      <img data-lazy-img-src="{{ image.thumb_small }}">
-      {{ title|safe }}
-    </figure>
-  {% endfor %}
+<div class="plant-grid">
 </div>
 
 {% endwith %}
