--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -162,7 +162,11 @@
 
 <p class="image-type-selector">
   <img src="/static/images/icons/show-me.png">
-   Show photos of: <select></select>
+   Show photos of: <select></select> 
+  {% if rank_beneath != 'species' %}
+    These are photos of representative {{ rank_beneath|taxon_plural }}
+    in this {{ page.rank }}
+  {% endif %}
 </p>
 
 <div class="plant-grid">
