--- a/gobotany/dkey/templates/dkey/_breadcrumbs.html
+++ b/gobotany/dkey/templates/dkey/_breadcrumbs.html
@@ -1,13 +1,16 @@
 {% load dkey_filters %}
+You are here:
 {% for ancestor in page|breadcrumbs %}
-  {% with atitle=ancestor|display_title %}
-    {% if forloop.counter0 == 0 %}
-      You are here: <a href="{% url dkey %}">Dichotomous Key</a>
-    {% else %}
-      &gt; <a data-rank="{{ ancestor.rank }}" data-title="{{ ancestor.title }}"
-              href="{% url dkey_page ancestor|slug %}"
-              >{{ atitle|expand_group_title }}</a>
-    {% endif %}
-  {% endwith %}
+  {% if forloop.counter0 == 0 %}
+    <a href="{% url dkey %}">Dichotomous Key</a>
+  {% else %}
+    &gt; <a data-rank="{{ ancestor.rank }}" data-title="{{ ancestor.title }}"
+            href="{% url dkey_page ancestor|slug %}"
+            >{{ ancestor|display_title|expand_group_title }}</a>
+  {% endif %}
 {% endfor %}
-&gt; <span>{{ page.title|expand_group_title }}</span>
+{% if page.title == 'Key to the Families' %}
+  <span>Dichotomous Key</span>
+{% else %}
+  &gt; <span>{{ page.title|expand_group_title }}</span>
+{% endif %}
