Fix #294 by changing full-key banner text

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -24,8 +24,10 @@
 
 {% block top_content %}
     {% if not species_in_simple_key %}
-        <div class="note">This is a species in our Full Key.
-        Complete data are coming soon.</div>
+        <div class="note">
+          Data collection in progress.
+          Complete data are coming soon.
+        </div>
     {% endif %}
 {% endblock %}
 
