Avoid error when there are no "species beneath" #289

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -163,7 +163,7 @@
 <p class="image-type-selector">
   <img src="/static/images/icons/show-me.png">
    Show photos of: <select></select> 
-  {% if rank_beneath != 'species' %}
+  {% if rank_beneath and rank_beneath != 'species' %}
     These are photos of representative {{ rank_beneath|taxon_plural }}
     in this {{ page.rank }}
   {% endif %}
