Move a CSS style so it is nested with SASS syntax.

--- a/gobotany/static/sass/_about.scss
+++ b/gobotany/static/sass/_about.scss
@@ -250,9 +250,9 @@ $image-box-shadow-color: rgba(0, 0, 0, 0.6);
 .gloss {
     color: $link-green;
     cursor: pointer;
-}
-.gloss:hover {
-    border-bottom: 1px dashed;
+    &:hover {
+        border-bottom: 1px dashed;
+    }
 }
 
 #glossary {
